Complete step1 sample

--- a/01-Login/www/index.html
+++ b/01-Login/www/index.html
@@ -31,6 +31,7 @@
   <!-- your app's js -->
   <script src="app/auth0.variables.js"></script>
   <script src="app/app.js"></script>
+  <script src="app/home/home.controller.js"></script>
   <script src="app/account/login.controller.js"></script>
 </head>
 
