--- a/01-Login/www/app/account/login.html
+++ b/01-Login/www/app/account/login.html
@@ -1,5 +1,9 @@
 <ion-view view-title="Log In" ng-controller="LoginController as vm">
-  <ion-content class="padding">
-    <input type="submit" ng-click="vm.login()" />
+  <ion-content class="center">
+    <div class="row">
+      <div class="col">
+          <div id="lock-container"></div>
+      </div>
+    <div>
   </ion-content>
 </ion-view>
