--- a/01-Login/www/app/home/home.html
+++ b/01-Login/www/app/home/home.html
@@ -1,17 +1,16 @@
-<ion-view view-title="Auth0 Ionic Quickstart">
+<ion-view view-title="Auth0 Ionic Quickstart" ng-controller="HomeController as vm">
   <ion-content class="padding">
-    <h2>Welcome to Ionic</h2>
-    <p>
-    This is the Ionic starter for tabs-based apps. For other starters and ready-made templates, check out the <a href="http://market.ionic.io/starters" target="_blank">Ionic Market</a>.
-    </p>
-    <p>
-      To edit the content of each tab, edit the corresponding template file in <code>www/templates/</code>. This template is <code>www/templates/tab-dash.html</code>
-    </p>
-    <p>
-    If you need help with your app, join the Ionic Community on the <a href="http://forum.ionicframework.com" target="_blank">Ionic Forum</a>. Make sure to <a href="http://twitter.com/ionicframework" target="_blank">follow us</a> on Twitter to get important updates and announcements for Ionic developers.
-    </p>
-    <p>
-      For help sending push notifications, join the <a href="https://apps.ionic.io/signup" target="_blank">Ionic Platform</a> and check out <a href="http://docs.ionic.io/docs/push-overview" target="_blank">Ionic Push</a>. We also have other services available.
-    </p>
+    <div ng-hide="vm.auth.isAuthenticated">
+      <p>Welcome to the Auth0 Ionic Sample! Please log in:</p>
+      <button class="button button-full button-positive" ng-click="vm.login()">
+        Log In
+      </button>
+    </div>
+    <div ng-show="vm.auth.isAuthenticated">
+      <p>Thank you for logging in!</p>
+      <button class="button button-full button-dark" ng-click="vm.logout()">
+        Log Out
+      </button>
+    </div>
   </ion-content>
 </ion-view>
