Fix custom login

--- a/02-Custom Login/www/index.html
+++ b/02-Custom Login/www/index.html
@@ -19,8 +19,8 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
-  <!-- Auth0 Lock -->
-  <script src="lib/auth0-lock/build/auth0-lock.js"></script>
+  <!-- Auth0's JS library -->
+  <script src="lib/auth0.js/build/auth0.js"></script>
   <!-- auth0-angular -->
   <script src="lib/auth0-angular/build/auth0-angular.js"></script>
   <!-- angular storage -->
