Start with account linking demo

--- a/04-Linking-Accounts/www/app/home/home.html
+++ b/04-Linking-Accounts/www/app/home/home.html
@@ -15,6 +15,10 @@
           <h2>{{ vm.profile.name }}</h2>
         </div>
 
+        <a class="item item-icon-left" ng-click="vm.linkAccount()">
+          <i class="icon ion-link"></i> Link Account 
+        </a>
+
         <a class="item item-icon-left assertive" ng-click="vm.logout()">
           <i class="icon ion-log-out"></i> Log Out
         </a>
