--- a/04-Linking-Accounts/www/index.html
+++ b/04-Linking-Accounts/www/index.html
@@ -33,6 +33,7 @@
   <script src="app/app.js"></script>
   <script src="app/home/home.controller.js"></script>
   <script src="app/account/login.controller.js"></script>
+  <script src="app/account/linkAccount.controller.js"></script>
 </head>
 
 <body ng-app="app">
