--- a/00-Starter-Seed/www/app/home/home.html
+++ b/00-Starter-Seed/www/app/home/home.html
@@ -1,4 +1,5 @@
 <ion-view view-title="Auth0 Ionic Quickstart" ng-controller="HomeController as vm">
   <ion-content class="padding">
+    <h3>Welcome to the Auth0 - Ionic integration app. This starter seed is an empty shell</h3>
   </ion-content>
 </ion-view>
