--- a/01-Login/www/index.html
+++ b/01-Login/www/index.html
@@ -20,9 +20,9 @@
   <script src="cordova.js"></script>
 
   <!-- Auth0 Lock -->
-  <script src="lib/auth0-lock/build/auth0-lock.js"></script>
-  <!-- auth0-angular -->
-  <script src="lib/auth0-angular/build/auth0-angular.js"></script>
+  <script src="lib/auth0-lock/build/lock.js"></script>
+  <!--Angular Lock-->
+  <script src="lib/angular-lock/dist/angular-lock.js"></script>
   <!-- angular storage -->
   <script src="lib/a0-angular-storage/dist/angular-storage.js"></script>
   <!-- angular-jwt -->
@@ -33,6 +33,7 @@
   <script src="app/app.js"></script>
   <script src="app/home/home.controller.js"></script>
   <script src="app/account/login.controller.js"></script>
+  <script src="app/auth/auth.service.js"></script>
 </head>
 
 <body ng-app="app">
