--- a/01-Login/www/index.html
+++ b/01-Login/www/index.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title>Login</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title></title>
+    <link rel="manifest" href="manifest.json">
 
-  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <!-- un-comment this code to enable service worker
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('service-worker.js')
+          .then(() => console.log('service worker installed'))
+          .catch(err => console.log('Error', err));
+      }
+    </script>-->
 
-  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-  <!-- ionic/angularjs js -->
-  <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <!-- ionic/angularjs js -->
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-  <!-- cordova script (this will be a 404 during development) -->
-  <script src="cordova.js"></script>
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
 
-  <!-- Auth0 Lock -->
-  <script src="lib/auth0-lock/build/lock.min.js"></script>
-  <!-- auth0-angular -->
-  <script src="lib/angular-lock/dist/angular-lock.min.js"></script>
-  <!-- angular-jwt -->
-  <script src="lib/angular-jwt/dist/angular-jwt.min.js"></script>
+    <!-- your app's js -->
+    <script src="js/app.js"></script>
+    <script src="js/app.run.js"></script>
+    <script src="js/auth0-variables.js"></script>
 
-  <!-- your app's js -->
-  <script src="./auth0.variables.js"></script>
-  <script src="./app.js"></script>
-  <script src="./app.run.js"></script>
-  <script src="components/auth/auth.service.js"></script>
-  <script src="components/home/home.controller.js"></script>
-  <script src="components/login/login.controller.js"></script>
-</head>
+    <!-- auth0.js -->
+    <script src="lib/auth0.js/build/auth0.js"></script>
+    <!-- Auth0 Lock -->
+    <script src="lib/auth0-lock/build/lock.min.js"></script>
+    <!-- auth0-angular -->
+    <script src="lib/angular-lock/dist/angular-lock.min.js"></script>
+    <!-- angular-jwt -->
+    <script src="lib/angular-jwt/dist/angular-jwt.min.js"></script>
 
-<body ng-app="app">
-  <!--
+    <script src="components/auth/auth.service.js"></script>
+    <script src="components/home/home.controller.js"></script>
+    <script src="components/login/login.controller.js"></script>
+  </head>
+  <body ng-app="app">
+    <!--
       The nav bar that will be updated as we navigate between views.
     -->
-  <ion-nav-bar class="bar-stable">
-    <ion-nav-back-button>
-    </ion-nav-back-button>
-  </ion-nav-bar>
-  <!--
+    <ion-nav-bar class="bar-stable">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
-  <ion-nav-view></ion-nav-view>
-</body>
-
+    <ion-nav-view></ion-nav-view>
+  </body>
 </html>
